# attila

./: .editorconfig  .gitignore  LICENSE  README.adoc  README.html  README.md  __init__.py  index.html  pyproject.toml  tasks.py
.github/: FUNDING.yml
.github/workflows/: main.yml  publish-docs.yml
static/css/: style-base.css  style.css  style.min.css
static/font/: README.md  config.json  icon.eot
static/js/: script.js
templates/: archives.html  article.html  author.html  authors.html  base.html  categories.html  category.html  index.html  page.html  pages.html  period_archives.html  tag.html  tags.html
templates/partials/: analytics.js  comments_count.html  jsonld.html  jsonld_article.html  loop.html  navigation-items.html  navigation.html  og.html  og_article.html  pagination.html
tests/: default_conf.py  requirements.txt  support.py  test_author_bio.py  test_coverimages.py  unittest.cfg
tests/content/: article_with_cover_image.rst  article_with_http_cover_image.rst  article_with_og_image.rst  article_without_cover.rst  artile_with_og_image.rst
tests/content/pages/: page_with_cover_image.rst  page_with_http_cover_image.rst  page_with_og_image.rst  page_without_cover_image.rst
